syntax = "proto3";
package user;
option go_package = "github.com/Salladin95/card-quizzler-microservices/api-service/user-service";

message SignInPayload {
  string email = 1;
  string password = 2;
}

message SignUpPayload {
  string email = 1;
  string password = 2;
  string name = 3;
  string birthday = 4;
}

message UpdateEmailPayload {
  string id = 1;
  string email = 2;
  int64 code = 3;
}

message UpdatePasswordPayload {
  string currentPassword = 1;
  string newPassword = 2;
  string id = 3;
}

message ResetPasswordPayload {
  string newPassword = 1;
  int64 code = 2;
  string email = 3;
}

message SignInRequest {
  SignInPayload payload = 1;
}

message SignUpRequest {
  SignUpPayload payload = 1;
}

message UpdateEmailRequest {
  UpdateEmailPayload payload = 1;
}


message UpdatePasswordRequest {
  UpdatePasswordPayload payload = 1;
}


message ResetPasswordRequest {
  ResetPasswordPayload payload = 1;
}

message RequestWithID {
  string id = 1;
}

message RequestWithEmail {
  string email = 1;
}

message Response {
  bytes data = 1;
  int64 code = 2;
  string message = 3;
}

service UserService {
  rpc SignIn(SignInRequest) returns (Response);
  rpc SignUp(SignUpRequest) returns (Response);
  rpc UpdateEmail(UpdateEmailRequest) returns (Response);
  rpc UpdatePassword(UpdatePasswordRequest) returns (Response);
  rpc ResetPassword(ResetPasswordRequest) returns (Response);
  rpc GetUserById(RequestWithID) returns (Response);
  rpc GetUserByEmail(RequestWithEmail) returns (Response);
  rpc DeleteUser(RequestWithID) returns (Response);
}
